@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.qualified;
+
+import org.apache.cayenne.testdo.qualified.auto._Qualified3;
+
+public class Qualified3 extends _Qualified3 {
+
+    private static final long serialVersionUID = 1L; 
+
+}
