@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.qualified;
+
+import org.apache.cayenne.testdo.qualified.auto._Qualified4;
+
+public class Qualified4 extends _Qualified4 {
+
+    private static final long serialVersionUID = 1L; 
+
+}
